<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.MainActivity"
    >

    <TextView
        android:id="@+id/twTitle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#0DD53F"
        android:gravity="center"
        android:text="@string/titleApp"
        android:textColor="#14496C"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvStudents"
        android:layout_width="427dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/llAddStudentPonel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twTitle" />


    <LinearLayout
        android:id="@+id/llAddStudentPonel"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/llPonelLelower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvStudents">
        <FrameLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            >
            <EditText
                android:id="@+id/tvFIO"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/full_name"/>
            <ImageButton
                android:id="@+id/bthCloseAddStudentPonel"
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close"
                />
        </FrameLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout
                android:id="@+id/Subject"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/Subject1"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Subject1"
                    style="@style/TextAppearance.AppCompat.TVSubject"
                    />
                <TextView
                    android:id="@+id/Subject2"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Subject2"
                    style="@style/TextAppearance.AppCompat.TVSubject"
                    />
                <TextView
                    android:id="@+id/Subject3"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Subject3"
                    style="@style/TextAppearance.AppCompat.TVSubject"
                    />
                <TextView
                    android:id="@+id/Subject4"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Subject4"
                    style="@style/TextAppearance.AppCompat.TVSubject"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/SinnKS1"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/KS"
                    />
                <Spinner
                    android:id="@+id/SinnKS2"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/KS"/>
                <Spinner
                    android:id="@+id/SinnKS3"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/KS"/>
                <Spinner
                    android:id="@+id/SinnKS4"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/KS"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPonelLelower"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/bthDownload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/download" />

        <Button
            android:id="@+id/bthSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save" />

        <Button
            android:id="@+id/bthAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>